--- a/OpenFonts/resume.tex
+++ b/OpenFonts/resume.tex
@@ -65,7 +65,7 @@
 %     TITLE NAME
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\namesection{高}{策}{ \urlstyle{same}\href{mailto:whoami@whoareyou.com}{whoami@whoareyou.com} | 1111 1111 111
+\namesection{Gao}{Ce}{ \urlstyle{same}\href{mailto:whoami@whoareyou.com}{whoami@whoareyou.com} | 1111 1111 111
 }
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -80,17 +80,16 @@
 %     EDUCATION
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{教育经历} 
-\sectionsep
+\section{Education} 
 
-\subsection{上海交通大学}
-\descript{硕士学位，主修软件工程}
+\subsection{Shanghai Jiao Tong University}
+\descript{MEng in Software Engineering}
 \location{2016.09-2019.03}
 \sectionsep
 
-\subsection{上海交通大学}
-\descript{学士学位，主修软件工程}
-\descript{辅修法学}
+\subsection{Shanghai Jiao Tong University}
+\descript{BE in Software Engineering}
+\descript{LLB in Law}
 \location{2012.09-2016.09}
 \sectionsep
 
@@ -98,55 +97,43 @@
 %     LINKS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{链接}
+\section{Links}
 \sectionsep
 Blog://  \href{http://gaocegege.com/Blog}{\bf gaocegege.com/Blog} \\
-(总计 3 万访客，8 万阅读量) \\    
+(30000 visitors and 80000 pageviews totally) \\    
 Github:// \href{https://github.com/gaocegege}{\bf gaocegege} \\
-(380+ 关注者) \\
+(380+ followers) \\
 LinkedIn://  \href{https://www.linkedin.com/in/gaocegege}{\bf gaocegege} \\
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     COURSEWORK
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-% \section{修读课程}
-% \subsection{Graduate}
-% Advanced Machine Learning \\
-% Open Source Software Engineering \\
-% Advanced Interactive Graphics \\
-% Compilers + Practicum \\
-% Cloud Computing \\
-% Evolutionary Computation \\
-% Defending Computer Networks \\
-% Machine Learning \\
-% \sectionsep
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %     SKILLS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{技能}
+\section{Skills}
 \sectionsep
-\subsection{编程}
-\location{超过 5000 行}
+\subsection{Programming}
+\location{Over 5000 lines}
 Go \textbullet{} Python \textbullet{} C++ \textbullet{} Java \\
-\location{1000 - 5000 行}
+\location{1000 - 5000 lines}
 R \textbullet{} C \textbullet{} C++ \textbullet{} Scala \textbullet{} \LaTeX\ \\
-\location{低于 1000 行}
+\location{Less than 1000 lines}
 HTML \textbullet{} Javascript \textbullet{} MatLab \textbullet{} Shell \textbullet{} Processing \\ 
 \sectionsep
 
-\subsection{云计算}
-\location{一般}
+\subsection{Cloud Computing}
+\location{Familiar}
 Docker \textbullet{} Kubernetes \\
-\location{了解}
+\location{Knowledge}
 Swarm \textbullet{} Moby \textbullet{} Linuxkit \textbullet{} HyperContainers \textbullet{} ClearContainers \textbullet{} Xen \textbullet{} KVM \textbullet{} Unikernel \\
 \sectionsep
 
 \subsection{DevOps}
-\location{一般}
-微服务 \textbullet{} Jenkins \textbullet{} Travis CI
+\location{Familiar}
+Micro Services \textbullet{} Jenkins \textbullet{} Travis CI
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
@@ -162,43 +149,43 @@ Swarm \textbullet{} Moby \textbullet{} Linuxkit \textbullet{} HyperContainers \t
 %     EXPERIENCE
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{实习经历}
+\section{Experience}
 \sectionsep
-\runsubsection{谷歌编程之夏}
-\descript{学生参与者}
-\location{2017.05 - 2017.09 | 远程工作}
+\runsubsection{Google Summer of Code}
+\descript{Student Participant}
+\location{2017.05 - 2017.09 | Remote Work}
 \vspace{\topsep}
 \begin{tightemize}
-    \item 共有 20651 个注册学生，其中 1318 个申请被谷歌接收，\textbf{接收率 6\%}
-    \item 为 Processing 基金会实现了对 Processing 的 R 语言支持
-    \item 与社区紧密合作，实现对 Processing 库的支持和对 R 包的支持
-    \item 所做项目 \href{https://github.com/gaocegege/Processing.R}{\bf Processing.R} 在 GitHub 上获得 \textbf{70 stars}，成为本次编程之夏 star 最多的项目
+    \item 1318 out of 20651 applicants\textbf{(6\%)} chosen to be a participant
+    \item Implemented R language mode for Processing
+    \item Cooperated with the community to support Processing libraries and R packages
+    \item \href{https://github.com/gaocegege/Processing.R}{\bf Processing.R} has \textbf{70 stars} in GitHub, which becomes one of the most popular GSoC projects
 \end{tightemize}
 \sectionsep
 
-\runsubsection{摩根士丹利}
-\descript{CIP 项目实习生}
-\location{2017.02-2017.08 | 上海}
+\runsubsection{Morgan Stanley}
+\descript{CIP Project Intern}
+\location{2017.02-2017.08 | Shanghai}
 \begin{tightemize}
-\item 优化开源容器调度管理框架 treadmill 的调度器
-\item 实现与 Kubernetes 类似的调度模型，同时保留自身的树形结构
+\item Optimized the scheduler in treadmill, which is the open source container management system
+\item Implemented scheduling logics similar to Kubernetes
 \end{tightemize}
 \sectionsep
 
-\runsubsection{上海触宝信息技术有限公司}
-\descript{数据工程师（实习）}
-\location{2015.09-2015.09 | 上海}
+\runsubsection{TouchPal}
+\descript{Data Engineer(Intern) }
+\location{2015.09-2015.09 | Shanghai}
 \begin{tightemize}
-\item 移植爬虫代码到新的平台，优化重写部分过期的爬虫
+\item Migrated the web crawler code to the new architecture
 \end{tightemize}
 \sectionsep
 
-\runsubsection{蚂蚁金服（杭州）网络技术有限公司}
-\descript{Java 研发工程师（实习）}
+\runsubsection{Alipay}
+\descript{Java R\&D Engineer(Intern)}
 \location{2015.07-2015.09}
 \begin{tightemize}
-\item 在支付宝国际事业团队从事海外直购业务开发
-\item 实现部分包裹清关的逻辑和后台管理的逻辑
+\item Worked in the international group
+\item Implemented some business logic and some logic about operation platform
 \end{tightemize}
 \sectionsep
 
@@ -206,25 +193,24 @@ Swarm \textbullet{} Moby \textbullet{} Linuxkit \textbullet{} HyperContainers \t
 %     RESEARCH
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{项目与论文}
+\section{Projects and Papers}
 \sectionsep
 \runsubsection{\href{https://github.com/caicloud/cyclone}{\bf Cyclone}}
-\descript{开发者, Maintainer}
+\descript{Maintainer}
 \location{2016.11}
 \begin{tightemize}
-    \item 基于 Docker 的持续集成与持续部署系统
-    \item 本科毕业设计，与才云科技合作开发，在 GitHub 上获得 \textbf{440 stars}
-    \item 调研其他开源实现，确定工作流程和架构选型，实现 YAML parser 和 Docker 的运行时集成
+    \item Cloud native continuous integration platform built for container workflow
+    \item Joint Research with caicloud, got \textbf{440 stars} in GitHub
+    \item Implemented YAML parser and Docker runtime
     \end{tightemize}
 \sectionsep
 
 \runsubsection{\href{https://github.com/gaocegege/scrala}{\bf Scrala}}
-\descript{开发者, Owner}
+\descript{Owner}
 \location{2015.12}
 \begin{tightemize}
-    \item 使用 scala 实现的爬虫框架，灵感来自 scrapy
-    \item 在 GitHub 上获得 \textbf{70 stars}
-    \item 底层使用 Actor 模型取代 Python 中的异步模型
+    \item Spider framework inspired by scrapy
+    \item Has \textbf{70 stars} in GitHub
     \end{tightemize}
 \sectionsep
 
@@ -232,13 +218,14 @@ Swarm \textbullet{} Moby \textbullet{} Linuxkit \textbullet{} HyperContainers \t
 %     OPEN SOURCE
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{开源贡献}
+\section{Open Source Contributions}
 \begin{tabular}{ll}
-\href{https://github.com/moby/moby/commits?author=gaocegege}{\bf moby/moby} & 实现 docker service ps -q 参数，与 swarmkit 更好集成 \\
-\href{https://github.com/opencontainers/runc/commits?author=gaocegege}{\bf opencontainers/runc} & 为了修复 \href{https://github.com/moby/moby/issues/27484}{moby/moby\#27484} 对上游进行的修改 \\
-\href{https://github.com/pingcap/tidb/commits?author=gaocegege}{\bf pingcap/tidb} & 在 travis 里引入了覆盖率测试; 实现 truncate 函数 \\
-\href{https://github.com/coala/coala-vs-code/commits/master?author=gaocegege}{\bf coala/coala-vs-code} & Visual Studio Code 上的插件，项目 maintainer \\
-\href{https://github.com/weijianwen/SJTUThesis/commits?author=gaocegege}{\bf weijianwen/SJTUThesis} & 为学士论文模板添加英文大摘要； 替换版权字体 \\
+\href{https://github.com/moby/moby/commits?author=gaocegege}{\bf moby/moby} & Implemented docker service ps -q option \\
+\href{https://github.com/opencontainers/runc/commits?author=gaocegege}{\bf opencontainers/runc} & Fixed an upstream bug for \href{https://github.com/moby/moby/issues/27484}{moby/moby\#27484} \\
+\href{https://github.com/pingcap/tidb/commits?author=gaocegege}{\bf pingcap/tidb} & Imported code coverage test; Implemented truncate function \\
+\href{https://github.com/coala/coala-vs-code/commits/master?author=gaocegege}{\bf coala/coala-vs-code} & Visual Studio Code plugin maintainer \\
+\href{https://github.com/weijianwen/SJTUThesis/commits?author=gaocegege}{\bf weijianwen/SJTUThesis} & Add English abstract for the template; \\
+ &  Replace copyrighted fonts \\
 \end{tabular}
 \sectionsep
 
@@ -246,14 +233,15 @@ Swarm \textbullet{} Moby \textbullet{} Linuxkit \textbullet{} HyperContainers \t
 %     AWARDS
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\section{所获奖项} 
+\section{Awards} 
 \begin{tabular}{rll}
-2017         & 奖学金  & 因特尔奖学金 \\
-2016	     & 二等奖  & 第十三届全国研究生数学建模竞赛 \\
-2016	     & 一等奖  & 第七届中国大学生服务外包创新创业大赛 \\
-2015	     & 二等奖  & 美国大学生数学建模竞赛 \\
-2015         & 一等奖 & 中国大学生数学建模竞赛上海赛区 \\
-2014	     & 二等奖/杰出个人  & 大众点评校园 Hackathon \\
+2017         & Scholarship  & Intel \\
+2016	     & 2nd Prize  & 13th National Post-Graduate Mathematic Contest in Modeling \\
+2016	     & 1st Prize  & 7th China Students Service \\
+ & & Outsourcing Innovation \& Entrepreneurship Competition \\
+2015	     & 2nd Prize  & Interdisciplinary Contest In Modeling \\
+2015         & 1st Prize & National Mathematical Contest in Modeling \\
+2014	     & 2nd Prize  & DaZhongDianPing Geek Challenge \\
 \end{tabular}
 \sectionsep
 
