--- a/OpenFonts.Chinese/resume.tex
+++ b/OpenFonts.Chinese/resume.tex
@@ -166,7 +166,7 @@ Swarm \textbullet{} Moby \textbullet{} Linuxkit \textbullet{} HyperContainers \t
 \sectionsep
 \runsubsection{谷歌编程之夏}
 \descript{学生参与者}
-\location{2017.05 - 2017.09 | 远程工作}
+\location{2017.05 - 2017.09 | 远程}
 \vspace{\topsep}
 \begin{tightemize}
     \item 共有 20651 个注册学生，其中 1318 个申请被谷歌接收，\textbf{接收率 6\%}
@@ -195,7 +195,7 @@ Swarm \textbullet{} Moby \textbullet{} Linuxkit \textbullet{} HyperContainers \t
 
 \runsubsection{蚂蚁金服（杭州）网络技术有限公司}
 \descript{Java 研发工程师（实习）}
-\location{2015.07-2015.09}
+\location{2015.07-2015.09 | 杭州}
 \begin{tightemize}
 \item 在支付宝国际事业团队从事海外直购业务开发
 \item 实现部分包裹清关的逻辑和后台管理的逻辑
@@ -209,7 +209,7 @@ Swarm \textbullet{} Moby \textbullet{} Linuxkit \textbullet{} HyperContainers \t
 \section{项目与论文}
 \sectionsep
 \runsubsection{\href{https://github.com/caicloud/cyclone}{\bf Cyclone}}
-\descript{开发者, Maintainer}
+\descript{Maintainer}
 \location{2016.11}
 \begin{tightemize}
     \item 基于 Docker 的持续集成与持续部署系统
@@ -219,7 +219,7 @@ Swarm \textbullet{} Moby \textbullet{} Linuxkit \textbullet{} HyperContainers \t
 \sectionsep
 
 \runsubsection{\href{https://github.com/gaocegege/scrala}{\bf Scrala}}
-\descript{开发者, Owner}
+\descript{Owner}
 \location{2015.12}
 \begin{tightemize}
     \item 使用 scala 实现的爬虫框架，灵感来自 scrapy
