--- a/OpenFonts/resume.tex
+++ b/OpenFonts/resume.tex
@@ -153,7 +153,7 @@ Micro Services \textbullet{} Jenkins \textbullet{} Travis CI
 \sectionsep
 \runsubsection{Google Summer of Code}
 \descript{Student Participant}
-\location{2017.05 - 2017.09 | Remote Work}
+\location{2017.05 - 2017.09 | Remote}
 \vspace{\topsep}
 \begin{tightemize}
     \item 1318 out of 20651 applicants\textbf{(6\%)} chosen to be a participant
@@ -182,7 +182,7 @@ Micro Services \textbullet{} Jenkins \textbullet{} Travis CI
 
 \runsubsection{Alipay}
 \descript{Java R\&D Engineer(Intern)}
-\location{2015.07-2015.09}
+\location{2015.07-2015.09 | Hangzhou}
 \begin{tightemize}
 \item Worked in the international group
 \item Implemented some business logic and some logic about operation platform
